# cyber-security

./: .gitignore  README.md  go.work  pyproject.toml
go-hack/: go.mod
go-hack/src/: hello.go
py-hack/: pyproject.toml
py-hack/src/py_hack/: __init__.py
src/hack_go/: go.mod  hack.go
src/hack_py/: hack.py  pyproject.toml
src/yog_sothoth/: __init__.py
