[project]
name = "py-hack"
version = "0.1.0"
description = "Add your description here"
# readme = "README.md"
authors = [
    { name = "Fernando Bryan Reza Campos", email = "fer.rezac@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
