[project]
name = "hack-py"
version = "0.0.1"
description = "Cybersecurity learning tools and examples"
readme = "README.md"
license = "MIT"
authors = [
	{ name = "Fernando Bryan Reza Campos", email = "fer.rezac@outlook.com" },
]
requires-python = ">=3.12"
dependencies = [
    "scapy>=2.6.1", # Network packet manipulation
    "requests>=2.32.5", # HTTP library for security testing
    "paramiko>=4.0.0", # SSH library for secure connections
    "cryptography>=46.0.3", # Cryptography library
    "python-nmap>=0.7.1", # Network mapping
    "python-whois>=0.9.6", # WHOIS lookup
    "beautifulsoup4>=4.14.2", # HTML parsing for security research
    "netifaces>=0.11.0", # Network interface information
    "ipaddress>=1.0.23", # IP address manipulation # Task automation
    "invoke>=2.2.1",
    "rich>=14.2.0",
]